export abstract class AbstractDTO {
}