export enum UserRole{
    ADMIN = 0,
    STAFF = 1,
}