@startuml

' Abstract classes
abstract class AbstractDTO {
}

' Enum for UserRole
enum UserRole {
    ADMIN
    STAFF
}

' DTO class definitions
class BookingDTO extends AbstractDTO {
    -bookingId : number
    -createdBy : number
    -createdAt : Date
    -startTime : Date
    -duration : number
    -endTime : Date
    -status : string
}

class BuildingDTO extends AbstractDTO {
    -buildingId : number
    -buildingNumber : string
    -address : string
    -lon : number
    -lat : number
    -isActive : boolean
    -roomsDto : RoomDTO[]
    -usersDto : UserDTO[]
}

class CityDTO extends AbstractDTO {
    -cityId : string
    -cityName : string
    -provinceState : string
    -buildingDtos : BuildingDTO[]
}

class EquipmentDTO extends AbstractDTO {
    -equipmentId : string
    -description : string
}

class LocationDTO extends AbstractDTO {
    -cityDto : CityDTO
    -buildingDto : BuildingDTO
    -roomDto : RoomDTO
}

class RoomDTO extends AbstractDTO {
    -roomId : number
    -cityId : number
    -buildingId : number
    -roomNumber : string
    -floorNumber : number
    -roomName : string
    -numberOfSeats : number
    -isActive : boolean
    -equipmentDtos : EquipmentDTO[]
    -bookingDtos : BookingDTO[]
}

' Adjusted User class to match corrected info
class UserDTO extends AbstractDTO {
    -userId : number
    -userName : string
    -firstName : string
    -lastName : string
    -email : string
    -locationDto : LocationDTO
    -isActive : boolean
    -userRoles : UserRole[]
    -bookingDtos : BookingDTO[]
}

' Relationships (Updated to reflect DTO relations)
UserDTO "1" -- "*" UserRole :  >
UserDTO "1" -- "*" BookingDTO :  >
BuildingDTO "1" -- "*" RoomDTO :  >
CityDTO "1" -- "*" BuildingDTO :  >
RoomDTO "1" -- "*" EquipmentDTO :  >
RoomDTO "1" -- "*" BookingDTO :  >

@enduml
